--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,9 +16,9 @@ jobs:
 
     - name: Install minikube
       run: | 
-        apt update -y
-        apt upgrade -y
-        apt install -y curl wget apt-transport-https
+        sudo apt update -y
+        sudo apt upgrade -y
+        sudo apt install -y curl wget apt-transport-https
         wget https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64
         cp minikube-linux-amd64 /usr/local/bin/minikube
         chmod +x /usr/local/bin/minikube
