--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,10 +19,10 @@ jobs:
         sudo apt update -y
         sudo apt upgrade -y
         sudo apt install -y curl wget apt-transport-https
-        wget https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64
-        cp minikube-linux-amd64 /usr/local/bin/minikube
-        chmod +x /usr/local/bin/minikube
-        echo "Installed minikube version: $(minikube version)"
+        sudo wget https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64
+        sudo cp minikube-linux-amd64 /usr/local/bin/minikube
+        sudo chmod +x /usr/local/bin/minikube
+        sudo echo "Installed minikube version: $(minikube version)"
 
     - name: Deploy server to minikube cluster
       run: |
